k8s_3/gomoku-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: gomoku-engine
  name: gomoku-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gomoku-engine
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: gomoku-engine
    spec:
      containers:
        - image: europe-west1-docker.pkg.dev/gomoku-375720/gomoku-engine/gomoku-engine:1.0
          name: gomoku-engine
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
