k8s_3/gomoku-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: gomoku-web
  name: gomoku-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gomoku-web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: gomoku-web
    spec:
      containers:
        - env:
            - name: SPRING_APPLICATION_JSON
              value: '{ "spring.datasource.url"  : "jdbc:mysql://gomoku-db:3306/root?useSSL=false", "spring.datasource.username" : "root", "spring.datasource.password" : "leblanc", "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5Dialect", "spring.jpa.hibernate.ddl-auto" : "update", "fr.leblanc.gomoku.engineUrl" : "http://gomoku-engine:8081" }'
          image: europe-west1-docker.pkg.dev/gomoku-375720/gomoku-web/gomoku-web:1.0
          name: gomoku-web
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
