k8s_3/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: gomoku-app-ingress

spec:
  rules:
    - http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gomoku-web
                port: 
                  number: 8080
